Fix a bug that caused reinitialization failure of MAC addresses on the lagg interface when removing the primary port.

PR:			201916
Differential Revision:	https://reviews.freebsd.org/D3301